--- a/index.html
+++ b/index.html
@@ -569,6 +569,10 @@ footer{margin-top:48px;padding:26px 0;color:rgba(255,255,255,0.6);text-align:cen
 					<div class="modelo-footer">
 						<span class="preco">299€</span>
 						<button class="botao-comprar">Comprar Agora</button>
+						<button class="multicolor-button" onclick="abrirModelo3D()">
+                            Ver Modelo 3D
+                        </button>
+
 						<button class="botao-specs-ghost" onclick="showDetails(1)">Ver Especificações</button>
 					</div>
 				</article>
@@ -911,6 +915,250 @@ footer{margin-top:48px;padding:26px 0;color:rgba(255,255,255,0.6);text-align:cen
 		alert(`Obrigado por subscrever com: ${emailInput.value}!`);
 		emailInput.value = '';
 	}
+</script>
+<!-- IMPORTAÇÃO DO MODEL-VIEWER -->
+<script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
+
+<style>
+/* ===========================================================
+   ULTRA PREMIUM STUDIO CONFIGURATOR — PREMIUM EDITION (2025)
+   =========================================================== */
+
+#colorPanel {
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  background: radial-gradient(circle at center,
+    rgba(10,10,15,0.88) 0%,
+    rgba(0,0,0,0.95) 70%
+  );
+  backdrop-filter: blur(25px) saturate(200%);
+
+  opacity: 0;
+  pointer-events: none;
+  transition: opacity .45s ease;
+
+  z-index: 99999;
+}
+
+/* Painel ativo */
+#colorPanel.mostrar {
+  opacity: 1;
+  pointer-events: all;
+}
+
+/* Partículas Cinemáticas */
+#particles-bg {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  z-index: -1;
+}
+
+.particle {
+  position: absolute;
+  width: 4px;
+  height: 4px;
+  background: rgba(255,255,255,0.25);
+  border-radius: 50%;
+  filter: blur(2px);
+  animation: floatUp linear infinite;
+}
+
+@keyframes floatUp {
+  from { transform: translateY(100vh); }
+  to   { transform: translateY(-10vh); }
+}
+
+/* Modelo com efeito hero */
+model-viewer {
+  width: 700px;
+  height: 700px;
+  max-width: 90vw;
+  max-height: 75vh;
+
+  filter: drop-shadow(0 0 35px rgba(255,255,255,0.15));
+  animation: riseIn .7s ease forwards;
+  opacity: 0;
+  transform: translateY(30px) scale(0.9);
+}
+
+@keyframes riseIn {
+  to {
+    opacity: 1;
+    transform: translateY(0px) scale(1);
+  }
+}
+
+/* ======================
+       PALETA DE CORES
+   ====================== */
+.color-bar {
+  margin-top: 35px;
+  display: flex;
+  gap: 22px;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.color-btn {
+  width: 56px;
+  height: 56px;
+  border-radius: 50%;
+  border: 3px solid rgba(255,255,255,0.5);
+
+  cursor: pointer;
+  transition: .25s ease;
+
+  box-shadow:
+    0 0 18px rgba(255,255,255,0.25),
+    inset 0 0 15px rgba(255,255,255,0.2);
+
+  position: relative;
+}
+
+.color-btn::after {
+  content: "";
+  position: absolute;
+  inset: -6px;
+  border-radius: 50%;
+  box-shadow: 0 0 0px transparent;
+  transition: .35s ease;
+}
+
+/* Hover com neon */
+.color-btn:hover {
+  transform: scale(1.22);
+  box-shadow:
+    0 0 25px currentColor,
+    inset 0 0 30px currentColor;
+}
+
+/* Estado ativo com anel neon */
+.color-btn.active::after {
+  box-shadow: 0 0 22px currentColor, 0 0 45px currentColor inset;
+}
+
+/* ======================
+     BOTÃO FECHAR
+   ====================== */
+#closePanel {
+  margin-top: 35px;
+  padding: 16px 40px;
+  font-size: 20px;
+  font-weight: 600;
+
+  background: linear-gradient(to bottom right, #1a1a1a, #2c2c2c);
+  border: 1px solid rgba(255,255,255,0.2);
+  border-radius: 14px;
+  color: white;
+  cursor: pointer;
+
+  transition: 0.3s ease;
+}
+
+#closePanel:hover {
+  transform: scale(1.08) translateY(-3px);
+  background: linear-gradient(to bottom right, #292929, #3c3c3c);
+  box-shadow: 0 8px 25px rgba(255,255,255,0.18);
+}
+</style>
+
+<!-- ======================
+       POPUP / PAINEL
+     ====================== -->
+<div id="colorPanel">
+
+    <!-- Partículas de fundo -->
+    <div id="particles-bg"></div>
+
+    <!-- Modelo 3D -->
+    <model-viewer id="viewer" src="model.glb" auto-rotate camera-controls></model-viewer>
+
+    <!-- Paleta -->
+    <div class="color-bar">
+      <div class="color-btn" style="background:red" data-hue="0"></div>
+      <div class="color-btn" style="background:orange" data-hue="30"></div>
+      <div class="color-btn" style="background:yellow" data-hue="60"></div>
+      <div class="color-btn" style="background:lime" data-hue="120"></div>
+      <div class="color-btn" style="background:cyan" data-hue="180"></div>
+      <div class="color-btn" style="background:blue" data-hue="240"></div>
+      <div class="color-btn" style="background:magenta" data-hue="300"></div>
+      <div class="color-btn" style="background:white" data-hue="reset"></div>
+    </div>
+
+    <button id="closePanel">Fechar</button>
+</div>
+
+<script>
+const panel = document.getElementById("colorPanel");
+const viewer = document.getElementById("viewer");
+
+/* ======================
+   Abrir painel
+   ====================== */
+function abrirModelo3D() {
+  panel.classList.add("mostrar");
+  document.body.style.overflow = "hidden";
+}
+
+/* ======================
+   Fechar painel
+   ====================== */
+document.getElementById("closePanel")
+.addEventListener("click", () => {
+  panel.classList.remove("mostrar");
+  document.body.style.overflow = "auto";
+});
+
+/* ======================
+   Sistema de cor melhorado
+   ====================== */
+document.querySelectorAll(".color-btn").forEach(btn => {
+  btn.addEventListener("click", () => {
+    
+    // Atualiza seleção visual
+    document.querySelectorAll(".color-btn")
+      .forEach(b => b.classList.remove("active"));
+    btn.classList.add("active");
+
+    // Aplica cor com suavização
+    const hue = btn.dataset.hue;
+    viewer.style.transition = "filter .4s ease";
+    viewer.style.filter =
+      hue === "reset"
+      ? "hue-rotate(0deg)"
+      : `hue-rotate(${hue}deg)`;
+  });
+});
+
+/* ======================
+   Partículas Cinemáticas
+   ====================== */
+function criarParticulas() {
+  const container = document.getElementById("particles-bg");
+
+  for (let i = 0; i < 40; i++) {
+    const p = document.createElement("div");
+    p.classList.add("particle");
+
+    p.style.left = Math.random() * 100 + "vw";
+    p.style.animationDuration = (6 + Math.random() * 12) + "s";
+    p.style.opacity = 0.1 + Math.random() * 0.4;
+
+    container.appendChild(p);
+  }
+}
+criarParticulas();
 </script>
 </body>
 </html>
